auto-test/tests/chapter_15/invalid_types/extra_credit/postfix_incr_array.c


int main(void) {
    int arr[3] = {1, 2, 3};
    arr++;
    return 0;
}